# KB4IT

./: .gitignore  AUTHORS  CHANGELOG.md  CREDITS  Changelog  README  README.adoc  README.md  README.rst  THANKS  check_dependencies.py  debug.sh  debug_techdoc.sh  genbuild.py  index.html  install_kb4it.py  install_kb4it.sh  install_kb4it_local.sh  menu.tmp  meson.build  pixi.toml  pyproject.toml  pyproject.toml.disabled  requirements.txt  setup.py  test.sh  update_kb4it_demo.sh  update_pypi_prd.sh
data/resources/: meson.build
data/resources/common/templates/: HTML_TAG_H4_ADOC.tpl
data/resources/themes/techdoc/: theme.json
data/resources/themes/techdoc/templates/: DATATABLE.tpl  DATATABLE_BODY_ITEM.tpl  EVENTCAL_PAGE_EVENTS_DAYS.tpl  EVENTCAL_PAGE_EVENTS_YEARS.tpl  EVENTCAL_TABLE_EVENT.tpl  EVENTCAL_TABLE_MONTH_NEW.tpl  EVENTCAL_TABLE_YEAR.tpl  HTML_HEADER_COMMON.tpl  HTML_HEADER_DOC.tpl  HTML_TAG_ADMONITION_ICON_NOTE_NEW.tpl  HTML_TAG_H3_NEW.tpl  PAGE_ALL.tpl  PAGE_BOOKMARKS.tpl  PAGE_CATEGORY_SWITCHER_SCOPE_TYPE.tpl  SECTION_ACTIONS.tpl  TABLE_MONTH_NEW.tpl  TABLE_MONTH_OLD.tpl  WORDCLOUD.tpl  WORDCLOUD_ITEM.tpl
kb4it/: VERSION  __init__.py  constants.py  kb4it.py  main.py  meson.build  rdfdb.py  utils.py
kb4it/core/: cache.py  env.py  errors.py  exceptions.py  log.py  main.py  perf.py  service.py  types.py  util.py
kb4it/es/data/: kb4it-data-extras.xml  kb4it-data.xml
kb4it/es/doc/: INSTALL.es.txt  README.es.txt  Tipos de eventos.txt
kb4it/es/metadata/: kb4it-pagelist-extras.txt  kb4it-pagelist.txt
kb4it/resources/common/appdata/: VERSION
kb4it/resources/common/appdata/pypi/: README.rst
kb4it/resources/common/templates/: HTML_TAG_ADMONITION_ADOC.tpl  HTML_TAG_ADMONITION_IMPORTANT_MD.tpl  HTML_TAG_ADMONITION_WARNING_MD.tpl  HTML_TAG_A_MD.tpl  HTML_TAG_H2_ADOC.tpl  HTML_TAG_PRE_ADOC.tpl  HTML_TAG_SECT1_ADOC.tpl  HTML_TAG_SECT2_MD.tpl  HTML_TAG_SECT4_ADOC.tpl  HTML_TAG_TOC_ADOC.tpl  PAGE_ABOUT_APP.tpl  PAGE_ABOUT_KB4IT.tpl  PAGE_KEY_KB4IT.tpl
kb4it/resources/common/templates/adoc/: HTML_TAG_H3_ADOC.tpl
kb4it/resources/common/templates/md/: HTML_TAG_ADMONITION_CAUTION_MD.tpl  HTML_TAG_ADMONITION_ICON_CAUTION_MD.tpl  HTML_TAG_ADMONITION_ICON_NOTE_MD.tpl  HTML_TAG_ADMONITION_NOTE_MD.tpl  HTML_TAG_ADMONITION_TIP_MD.tpl  HTML_TAG_TABLE_KB4IT_MD.tpl  PAGE_ABOUT_KB4IT.tpl
kb4it/resources/common/uikit/css/: kb4it.css
kb4it/resources/offline/appdata/: VERSION
kb4it/resources/offline/docinfo/: footer.html  header.html  header_nodoc.html
kb4it/resources/offline/templates/: ADMONITION_ICON_NOTE_NEW.tpl  ADMONITION_ICON_TIP_NEW.tpl  BLOG.tpl  BOOKMARKS.tpl  DOC_CARD.tpl  DOC_CARD_BLOGPOST.tpl  DOC_CARD_FILTER_DATA_TITLE.tpl  DOC_CARD_FILTER_DATA_TITLE_PLUS_OTHER_DATA.tpl  DOC_CARD_FILTER_HEADER.tpl  DOC_CARD_FILTER_HEADER_ITEM.tpl  DOC_CARD_FOOTER.tpl  DOC_CARD_LINK.tpl  H1_NEW.tpl  H2_NEW.tpl  H2_OLD.tpl  INDEX.tpl  INDEX_TAB_STATS.tpl  KEY_LEADER_ITEM.tpl  KEY_MODAL_BUTTON.tpl  KEY_PAGE.tpl  KEY_PAGE_WITH_FILTERS.tpl  LEADER_ROW.tpl  LEADER_ROW_VALUE_LINK.tpl  MENU_CONTENTS_DISABLED.tpl  MENU_CONTENTS_ENABLED.tpl  MESSAGE.tpl  METADATA_NEW.tpl  METADATA_ROW_CUSTOM_PROPERTY.tpl  METADATA_SECTION_BODY.tpl  METADATA_SECTION_FOOTER.tpl  METADATA_SECTION_HEADER.tpl  METADATA_VALUE_LINK.tpl  METAKEY.tpl  METAVALUE.tpl  PAGE_ABOUT.tpl  PAGE_PROPERTIES.tpl  PAGE_SEARCH.tpl  PAGE_STATS.tpl  PAGINATION_CARD.tpl  PROPERTY_FILTER.tpl  (+15 more)
kb4it/resources/online/css/: kb4it.css  print.css
kb4it/resources/online/docinfo/: docinfo-footer.html  docinfo.html
kb4it/resources/online/js/jquery/: jquery-ui.css  jquery-ui.js  jquery-ui.structure.min.css  jquery-ui.theme.min.css
kb4it/resources/online/uikit/css/: kb4it.css  print.css
kb4it/resources/themes/blog/: theme.json
kb4it/resources/themes/blog/css/: blog.css  custom.css
kb4it/resources/themes/blog/logic/: evcal.py  theme.py
kb4it/resources/themes/blog/templates/: CARD_DOC.tpl  DATATABLE.tpl  DATATABLE_BODY_ITEM.tpl  DATATABLE_HEADER_ITEM.tpl  EVENTCAL_PAGE_EVENTS_DAYS.tpl  EVENTCAL_PAGE_EVENTS_MONTHS.tpl  EVENTCAL_PAGE_EVENTS_YEARS.tpl  EVENTCAL_TABLE_MONTH_NEW.tpl  EVENTCAL_TABLE_YEAR.tpl  EVENTCAL_TD_DAY_NOLINK_TODAY.tpl  EVENTCAL_YEAR_PAGINATION.tpl  EVENTCAL_YEAR_PAGINATION_ITEM.tpl  HTML_BODY.tpl  HTML_BODY_INDEX_POST.tpl  HTML_FOOTER.tpl  HTML_HEADER_COMMON.tpl  HTML_HEADER_MENU_CONTENTS_DISABLED.tpl  HTML_HEADER_MENU_CONTENTS_ENABLED.tpl  HTML_TAG_ADMONITION_CAUTION_NEW.tpl  HTML_TAG_ADMONITION_ICON_WARNING_NEW.tpl  HTML_TAG_ADMONITION_NOTE_NEW.tpl  HTML_TAG_H2_NEW.tpl  HTML_TAG_SECT2_NEW.tpl  HTML_TAG_SECT3_NEW.tpl  HTML_TAG_SECT4_NEW.tpl  HTML_TAG_TABLE_NEW.tpl  HTML_TAG_TABLE_OLD_2.tpl  LINK.tpl  METADATA_SECTION.tpl  PAGE_ABOUT_THEME.tpl  PAGE_ALL.tpl  PAGE_CATEGORY.tpl  PAGE_ETYPE.tpl  PAGE_EVENTS.tpl  PAGE_HELP.tpl  PAGE_INDEX.tpl  PAGE_INDEX.tpl.old  PAGE_KEY.tpl  PAGE_KEY_VALUE.tpl  PAGE_PAGINATION_HEAD.tpl  (+7 more)
kb4it/resources/themes/book/: theme.json
kb4it/resources/themes/book/logic/: theme.py
kb4it/resources/themes/bootstrap/: theme.adoc
kb4it/resources/themes/bootstrap/logic/: theme.py
kb4it/resources/themes/bootstrap/templates/: HTML_FOOTER.tpl  HTML_HEADER_COMMON.tpl  HTML_TAG_H2_NEW.tpl  HTML_TAG_IMG_NEW.tpl
kb4it/resources/themes/datatable/: theme.adoc
kb4it/resources/themes/datatable/logic/: theme.py
kb4it/resources/themes/newspaper/: theme.adoc
kb4it/resources/themes/newspaper-lite/: theme.adoc
kb4it/resources/themes/oikos/: theme.adoc
kb4it/resources/themes/restaurant/: theme.json
kb4it/resources/themes/simple/: theme.adoc
kb4it/resources/themes/snippets/: theme.adoc
kb4it/resources/themes/techdoc/: index.adoc  theme.adoc  theme.csv  theme.json
kb4it/resources/themes/uikit/: theme.adoc  theme.json
kb4it/services/: app.py  backend.py  builder.py  cache.py  cleaner.py  compiler.py  database.py  deployer.py  frontend.py  processor.py  workflow.py
kb4it/src/: kb4it.py
kb4it/src/core/: mod_env.py  mod_log.py  mod_srv.py  mod_utils.py
kb4it/src/services/: srv_app.py  srv_builder.py  srv_db.py  srv_rss.py
kb4it/tui/: __init__.py  app.py
new/: pyproject.toml
(+589 files in other folders)
