#~ [project]
#~ authors = [{name = "Tomás Vírseda", email = "tomasvirseda@gmail.com"}]
#~ dependencies = []
#~ name = "KB4IT"
#~ requires-python = ">= 3.12"
#~ version = "0.7.20+build.18"
#~ license = "GPL-3.0-or-later"
#~ keywords = ["static-site-generator", "asciidoctor", "documentation"]
#~ classifiers = [
 #~ "Development Status :: 4 - Beta",
 #~ "Environment :: Console",
 #~ "Environment :: Web Environment",
 #~ "Intended Audience :: Developers",
 #~ "Intended Audience :: Information Technology",
 #~ "Intended Audience :: System Administrators",
 #~ "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
 #~ "Natural Language :: English",
 #~ "Operating System :: POSIX :: Linux",
 #~ "Programming Language :: Python :: 3",
 #~ "Topic :: Documentation",
 #~ "Topic :: Software Development :: Documentation",
 #~ "Topic :: Utilities",
#~ ]

#~ [build-system]
#~ build-backend = "hatchling.build"
#~ requires = ["hatchling"]

#~ [tool.pixi.workspace]
#~ channels = ["conda-forge"]
#~ platforms = ["linux-64"]

#~ [tool.pixi.pypi-dependencies]
#~ kb4it = { path = ".", editable = true }

#~ [tool.pixi.dependencies]
#~ mako = ">=1.3.10,<2"
#~ lxml = ">=6.0.2,<7"

#~ [tool.pixi.tasks]
#~ version = "kb4it --version"
#~ myblog_force = "kb4it -L DEBUG build /home/t00m/tmp/myblog/config/repo.json -f"
#~ myblog = "kb4it -L DEBUG build /home/t00m/tmp/myblog/config/repo.json"


dynamic = [ "classifiers" ]

classifiers = [
 "Development Status :: 4 - Beta",
 "Environment :: Console",
 "Environment :: Web Environment",
 "Intended Audience :: Developers",
 "Intended Audience :: Information Technology",
 "Intended Audience :: System Administrators",
 "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
 "Natural Language :: English",
 "Operating System :: POSIX :: Linux",
 "Programming Language :: Python :: 3",
 "Topic :: Documentation",
 "Topic :: Software Development :: Documentation",
 "Topic :: Utilities",
]

[tool.poetry]
name = "KB4IT"
version = "0.7.24+build.157" # Replace with ENV['APP']['version']
description = "A static website generator based on Asciidoctor sources."
authors = ["Tomás Vírseda <replace_with_author_email>"] # Replace with ENV['APP']['author_email']
license = "GPL-3.0-or-later"
homepage = "https://github.com/t00m/KB4IT"
repository = "https://github.com/t00m/KB4IT"
keywords = ["static-site-generator", "asciidoctor", "documentation"]

[tool.poetry.dependencies]
python = "^3.8" # Adjust the version as needed
Mako = "1.3.6"
lxml = "*"

# [tool.poetry.extras]
# Additional features or dependencies can be added here

# [tool.poetry.include]
# README.rst = true
# kb4it/VERSION = true
# kb4it/resources/** = true

[tool.poetry.scripts]
kb4it = "kb4it.core.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
