[tool.poetry]
name = "KB4IT"
version = "0.7.35+build.16"
description = "A static website generator based on Asciidoctor sources."
authors = ["Tomás Vírseda <tomasvirseda@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
homepage = "https://github.com/t00m/KB4IT"
repository = "https://github.com/t00m/KB4IT"
keywords = ["static-site-generator", "asciidoctor", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
packages = [
    { include = "kb4it" },
]
include = [
    { path = "kb4it/VERSION", format = ["sdist", "wheel"] },
    { path = "kb4it/resources/**/*", format = ["sdist", "wheel"] },
    { path = "README.rst", format = ["sdist", "wheel"] },
    { path = "LICENSE", format = ["sdist", "wheel"] },
    { path = "AUTHORS", format = ["sdist", "wheel"] },
    { path = "Changelog", format = ["sdist", "wheel"] },
    { path = "THANKS", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
Mako = "1.3.11"
lxml = "*"

[tool.poetry.scripts]
kb4it = "kb4it.core.main:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
