[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kb4it"  # Replace this with ENV['APP']['shortname'] during dynamic evaluation
version = "0.7.10"  # Replace this with ENV['APP']['version']
description = "A static website generator based on Asciidoctor sources."
readme = "README.rst"
license = { text = "GNU General Public License v3 or later (GPLv3+)" }
authors = [
    { name = "Tomás Vírseda", email = "tomas.virseda@gmail.com" }
]
#homepage = "https://github.com/t00m/KB4IT"
#download_url = "https://github.com/t00m/KB4IT/archive/master.zip"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities"
]
keywords = ["static", "website", "generator", "Asciidoctor"]

dependencies = [
    "Mako==1.3.6"
]

[project.optional-dependencies]
dev = []

[project.scripts]
kb4it = "kb4it.core.main:main"

[tool.setuptools.package-data]
# include_package_data=True is implied, but manually list data if required
kb4it = ["0.7.10"]

#[tool.setuptools.data-files]
"kb4it/resources" = ["kb4it/resources/themes/techdoc"]

#[tool.setuptools.dynamic]
#version = { attr = "kb4it.core.env.ENV['APP']['version']" }
#name = { attr = "kb4it.core.env.ENV['APP']['shortname']" }
#authors = [{ name = "kb4it.core.env.ENV['APP']['author']", email = "kb4it.core.env.ENV['APP']['author_email']" }]
#homepage = { attr = "kb4it.core.env.ENV['APP']['website']" }

