install_subdir('themes', install_dir: join_paths(get_option('datadir'), 'kb4it', 'data', 'resources', ))
install_subdir('common', install_dir: join_paths(get_option('datadir'), 'kb4it', 'data', 'resources', ))

#~ pkgdatadir = join_paths(get_option('prefix'), get_option('datadir'), meson.project_name())

